// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSupportedUrlParams provides defaults for empty string array values 1`] = `
Object {
  "autorefreshInterval": 60000,
  "autorefreshIsPaused": false,
  "dateRangeEnd": "now",
  "dateRangeStart": "now-15m",
  "pagination": undefined,
  "search": "",
  "selectedPingStatus": "down",
}
`;

exports[`getSupportedUrlParams provides defaults for undefined values 1`] = `
Object {
  "autorefreshInterval": 60000,
  "autorefreshIsPaused": false,
  "dateRangeEnd": "now",
  "dateRangeStart": "now-15m",
  "pagination": undefined,
  "search": "",
  "selectedPingStatus": "down",
}
`;

exports[`getSupportedUrlParams returns custom values 1`] = `
Object {
  "autorefreshInterval": 23,
  "autorefreshIsPaused": false,
  "dateRangeEnd": "bar",
  "dateRangeStart": "foo",
  "pagination": undefined,
  "search": "monitor.status: down",
  "selectedPingStatus": "up",
}
`;

exports[`getSupportedUrlParams returns default values 1`] = `
Object {
  "autorefreshInterval": 60000,
  "autorefreshIsPaused": false,
  "dateRangeEnd": "now",
  "dateRangeStart": "now-15m",
  "pagination": undefined,
  "search": "",
  "selectedPingStatus": "down",
}
`;

exports[`getSupportedUrlParams returns the first item for string arrays 1`] = `
Object {
  "autorefreshInterval": 60000,
  "autorefreshIsPaused": false,
  "dateRangeEnd": "now",
  "dateRangeStart": "now-18d",
  "pagination": undefined,
  "search": "",
  "selectedPingStatus": "down",
}
`;
